<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecordActivity">

    <TextView
        android:id="@+id/addRecordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/addRecord"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/addValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:text="@string/addValueText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addRecordTextView"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/valueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:hint="@string/addValue"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addValueTextView"
        app:layout_constraintVertical_bias="0" />


    <TextView
        android:id="@+id/chooseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:text="@string/chooseDateAndTime"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/valueEditText"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:id="@+id/datePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDateTextView"
        app:layout_constraintVertical_bias="0.049"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:onClick="pickDate"
            android:text="@string/datePicker" />

        <Button
            android:id="@+id/timePickerButton"
            android:layout_width="122dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:onClick="pickTime"
            android:text="@string/timePicker" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pickedDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDateTextView"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/dateChosenTextView"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timeChosenTextView"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/appointmentBookButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="60dp"
        android:onClick="getAppointment"
        android:text="@string/addRecordButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecordTextView"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentBookButton"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>